@@ -154,3 +154,12 @@ background: transparent url(../images/contact_48.png) no-repeat;
 }
 */
 
+
+/*************************/
+/* REMOVE DEVELOPER LINK */
+/*************************/
+
+.by {
+	display: none;
+}
+
